// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/panel/panelHeader/main should render 1`] = `
<div
  className="msla-panel-header"
>
  <div
    className="collapse-toggle-right"
  >
    <div
      className="ms-TooltipHost root-109"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="none"
    >
      <button
        aria-label="Collapse"
        className="ms-Button ms-Button--icon root-110"
        data-automation-id="msla-panel-header-collapse-nav"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-111"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-105 css-119 ms-Button-icon icon-113"
            data-icon-name="DoubleChevronRight"
            style={
              {
                "fontFamily": ""FabricMDL2Icons-6"",
              }
            }
          >
            
          </i>
        </span>
      </button>
      <div
        hidden={true}
        id="tooltip0"
        style={
          {
            "border": 0,
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        Collapse
      </div>
    </div>
  </div>
  <div
    className="msla-panel-card-header"
    style={{}}
  >
    <div
      className="ms-Spinner msla-card-header-spinner root-121"
    >
      <div
        className="ms-Spinner-circle ms-Spinner--medium circle-122"
      />
    </div>
    <div
      className="msla-panel-card-title-container"
      hidden={false}
    >
      <div
        className="ms-TextField ms-TextField--borderless msla-card-title root-125"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-126"
          >
            <input
              aria-invalid={false}
              aria-label="Card Title"
              className="ms-TextField-field field-127"
              maxLength={80}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-panel-header-controls"
      hidden={false}
    />
  </div>
</div>
`;

exports[`lib/panel/panelHeader/main should render with panel header menu 1`] = `
<div
  className="msla-panel-header"
>
  <div
    className="collapse-toggle-right"
  >
    <div
      className="ms-TooltipHost root-109"
      onBlurCapture={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="none"
    >
      <button
        aria-label="Collapse"
        className="ms-Button ms-Button--icon root-110"
        data-automation-id="msla-panel-header-collapse-nav"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-111"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-105 css-119 ms-Button-icon icon-113"
            data-icon-name="DoubleChevronRight"
            style={
              {
                "fontFamily": ""FabricMDL2Icons-6"",
              }
            }
          >
            
          </i>
        </span>
      </button>
      <div
        hidden={true}
        id="tooltip9"
        style={
          {
            "border": 0,
            "height": 1,
            "margin": -1,
            "overflow": "hidden",
            "padding": 0,
            "position": "absolute",
            "whiteSpace": "nowrap",
            "width": 1,
          }
        }
      >
        Collapse
      </div>
    </div>
  </div>
  <div
    className="msla-panel-card-header"
    style={{}}
  >
    <div
      className="ms-Spinner msla-card-header-spinner root-121"
    >
      <div
        className="ms-Spinner-circle ms-Spinner--medium circle-122"
      />
    </div>
    <div
      className="msla-panel-card-title-container"
      hidden={false}
    >
      <div
        className="ms-TextField ms-TextField--borderless msla-card-title root-125"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-126"
          >
            <input
              aria-invalid={false}
              aria-label="Card Title"
              className="ms-TextField-field field-127"
              maxLength={80}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="msla-panel-header-controls"
      hidden={false}
    />
  </div>
</div>
`;
